autotools: Adapt autotools for using WebKit2
https://bugzilla.gnome.org/show_bug.cgi?id=686376

--- a/configure.ac
+++ b/configure.ac
@@ -35,7 +35,7 @@ PKG_CHECK_MODULES(YELP,
 	libxslt >= 1.1.4
 	libexslt >= 0.8.1
 	sqlite3
-	webkitgtk-3.0 >= 1.3.10
+	webkit2gtk-4.0 >= 2.7.1
 	yelp-xsl >= 3.12.0
 ])
 AC_SUBST([YELP_CFLAGS])
