yelp-view: Implement pages load in WebKit2
Substitute webkit_web_view_load_string call for webkit_web_view_load_html for showing error pages.
Implement custom uri schemes for loading the normal pages.

We should deal with the uris that Yelp undestand and the uris that Webkit undestand so we have created functions to convert from one to the others. In addition, we should add a hack to be able to load absolute uris. When we have a help:gnome-help/... uri on our document and the current page has the same scheme (help) WebKit interprets this uri as relative and it builds a different uri. To fix this instead of use a help scheme we use a bogus-help schme so WebKit interprets the uri as absolute.

--- a/libyelp/Makefile.am
+++ b/libyelp/Makefile.am
@@ -24,6 +24,7 @@ libyelp_la_SOURCES =                \
 	yelp-transform.c            \
 	yelp-uri.c                  \
 	yelp-types.c                \
+	yelp-uri-builder.c          \
 	yelp-view.c
 
 EXTRA_DIST =                        \
@@ -75,6 +76,7 @@ libyelp_headers =                   \
 	yelp-storage.h              \
 	yelp-transform.h            \
 	yelp-uri.h                  \
+	yelp-uri-builder.h          \
 	yelp-view.h
 
 libyelp_includedir = $(includedir)/libyelp/
