Remove LZMA and BZ2 from GTK-Doc if we are compiling without them
https://bugzilla.gnome.org/show_bug.cgi?id=737519

--- a/docs/libyelp/Makefile.am
+++ b/docs/libyelp/Makefile.am
@@ -21,6 +21,17 @@ GTKDOC_LIBS =					\
 HFILE_GLOB = $(top_srcdir)/libyelp/*.h
 CFILE_GLOB = $(top_srcdir)/libyelp/*.c
 IGNORE_HFILES = yelp-debug.h yelp-types.h
+IGNORE_CFILES =
+
+if !ENABLE_LZMA
+IGNORE_HFILES += $(top_srcdir)/libyelp/yelp-lzma-decompressor.h
+IGNORE_CFILES += $(top_srcdir)/libyelp/yelp-lzma-decompressor.c
+endif
+
+if !ENABLE_BZ2
+IGNORE_HFILES += $(top_srcdir)/libyelp/yelp-bz2-decompressor.h
+IGNORE_CFILES += $(top_srcdir)/libyelp/yelp-bz2-decompressor.c
+endif
 
 MKDB_OPTIONS = --output-format=xml --sgml-mode --name-space=yelp --ignore-files='yelp-debug.c yelp-debug.h yelp-types.c yelp-types.h'
 
