Use WARN_CFLAGS instead of AM_CFLAGS
There is no need to use the indirection of AM_CFLAGS.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,6 +1,6 @@
 YELP_COMMON_CFLAGS =				\
 	$(YELP_CFLAGS)				\
-	$(AM_CFLAGS)				\
+	$(WARN_CFLAGS)				\
 	$(YELP_DEFINES)				\
 	-DDATADIR=\""$(datadir)"\"		\
 	-I$(top_srcdir)/libyelp
