Force libyelpcommon to be installed before libyelp
Libtool (specifically the Automake rules) has an unfortunate problem
that it does not guarantee the install order of libraries if two
Makefile variables are used, such as in the case of pkglib_LTLIBRARIES
and lib_LTLIBRARIES. As libyelpcommon is a depdency of libyelp, it must
be installed first. Force this by adding a dependency on
install-pkglibLTLIBRARIES.

--- a/libyelp/Makefile.am
+++ b/libyelp/Makefile.am
@@ -1,3 +1,8 @@
+# Libtool is utterly broken when it comes to ordering library dependencies.
+# Hack around this awfulness: https://lists.gnu.org/archive/html/libtool/2004-10/msg00051.html
+# As libyelp depends on libyelpcommon, force libyelpcommon to be installed
+# first.
+install-exec-am: install-pkglibLTLIBRARIES install-libLTLIBRARIES
 pkglib_LTLIBRARIES = libyelpcommon.la
 
 libyelpcommon_la_SOURCES =      \
