--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ AC_CONFIG_SRCDIR([src/yelp.c])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 
-AM_INIT_AUTOMAKE([1.11 dist-bzip2 no-dist-gzip tar-ustar])
+AM_INIT_AUTOMAKE([1.11 dist-xz no-dist-gzip tar-ustar])
 AM_MAINTAINER_MODE([enable])
 
 AM_SILENT_RULES([yes])
