Fix linking error for undefined reference to hypot
https://bugzilla.gnome.org/show_bug.cgi?id=755489

--- a/libyelp/Makefile.am
+++ b/libyelp/Makefile.am
@@ -18,7 +18,7 @@ libyelpcommon_la_CFLAGS =               \
 	-DYELP_ICON_PATH=\"$(YELP_ICON_PATH)\"
 
 
-libyelpcommon_la_LIBADD = $(YELP_LIBS)
+libyelpcommon_la_LIBADD = $(YELP_LIBS) $(LIBM)
 libyelpcommon_la_LDFLAGS = 	\
 	-avoid-version		\
 	-no-undefined
