--- a/data/icons/hicolor/16x16/status/Makefile.am
+++ b/data/icons/hicolor/16x16/status/Makefile.am
@@ -1,10 +1,8 @@
 icondir = $(datadir)/yelp/icons/hicolor/16x16/status
 
-icon_DATA = 				\
+dist_icon_DATA =			\
 	bookmark.png			\
 	yelp-page-task.png		\
 	yelp-page-tip.png		\
 	yelp-page-ui.png		\
 	yelp-page-video.png
-
-EXTRA_DIST = $(icon_DATA)
