--- a/data/icons/hicolor/scalable/status/Makefile.am
+++ b/data/icons/hicolor/scalable/status/Makefile.am
@@ -1,6 +1,6 @@
 icondir = $(datadir)/yelp/icons/hicolor/scalable/status
 
-icon_DATA =				\
+dist_icon_DATA =			\
 	yelp-page-problem-symbolic.svg	\
 	yelp-page-search-symbolic.svg	\
 	yelp-page-task-symbolic.svg	\
@@ -8,5 +8,3 @@ icon_DATA =				\
 	yelp-page-ui-symbolic.svg	\
 	yelp-page-video-symbolic.svg	\
 	yelp-page-symbolic.svg
-
-EXTRA_DIST = $(icon_DATA)
