--- a/data/mathjax/Makefile.am
+++ b/data/mathjax/Makefile.am
@@ -2,6 +2,6 @@ SUBDIRS = config extensions fonts/HTML-CSS/TeX/woff jax unpacked
 
 mjdir=$(datadir)/yelp/mathjax
 
-mj_DATA = MathJax.js
+dist_mj_DATA = MathJax.js
 
-EXTRA_DIST = $(mj_DATA) LICENSE README
+dist_noinst_DATA = LICENSE README
