--- a/data/mathjax/extensions/HTML-CSS/Makefile.am
+++ b/data/mathjax/extensions/HTML-CSS/Makefile.am
@@ -1,5 +1,3 @@
 mjdir=$(datadir)/yelp/mathjax/extensions/HTML-CSS
 
-mj_DATA = handle-floats.js
-
-EXTRA_DIST = $(mj_DATA)
+dist_mj_DATA = handle-floats.js
