--- a/data/mathjax/extensions/Makefile.am
+++ b/data/mathjax/extensions/Makefile.am
@@ -2,10 +2,8 @@ SUBDIRS = HTML-CSS
 
 mjdir=$(datadir)/yelp/mathjax/extensions
 
-mj_DATA =		\
+dist_mj_DATA =		\
 	MathEvents.js	\
 	MathMenu.js	\
 	MathZoom.js	\
 	mml2jax.js
-
-EXTRA_DIST = $(mj_DATA)
