--- a/data/mathjax/jax/input/MathML/Makefile.am
+++ b/data/mathjax/jax/input/MathML/Makefile.am
@@ -2,6 +2,4 @@ SUBDIRS = entities
 
 mjdir=$(datadir)/yelp/mathjax/jax/input/MathML
 
-mj_DATA = config.js jax.js
-
-EXTRA_DIST = $(mj_DATA)
+dist_mj_DATA = config.js jax.js
