--- a/data/mathjax/jax/output/HTML-CSS/fonts/TeX/Greek/BoldItalic/Makefile.am
+++ b/data/mathjax/jax/output/HTML-CSS/fonts/TeX/Greek/BoldItalic/Makefile.am
@@ -1,5 +1,3 @@
 mjdir=$(datadir)/yelp/mathjax/jax/output/HTML-CSS/fonts/TeX/Greek/BoldItalic
 
-mj_DATA = Main.js
-
-EXTRA_DIST = $(mj_DATA)
+dist_mj_DATA = Main.js
