--- a/data/mathjax/jax/output/HTML-CSS/fonts/TeX/Script/Regular/Makefile.am
+++ b/data/mathjax/jax/output/HTML-CSS/fonts/TeX/Script/Regular/Makefile.am
@@ -1,5 +1,3 @@
 mjdir=$(datadir)/yelp/mathjax/jax/output/HTML-CSS/fonts/TeX/Script/Regular
 
-mj_DATA = Main.js Other.js BasicLatin.js
-
-EXTRA_DIST = $(mj_DATA)
+dist_mj_DATA = Main.js Other.js BasicLatin.js
