--- a/data/mathjax/jax/output/HTML-CSS/fonts/TeX/Typewriter/Regular/Makefile.am
+++ b/data/mathjax/jax/output/HTML-CSS/fonts/TeX/Typewriter/Regular/Makefile.am
@@ -1,9 +1,7 @@
 mjdir=$(datadir)/yelp/mathjax/jax/output/HTML-CSS/fonts/TeX/Typewriter/Regular
 
-mj_DATA =			\
+dist_mj_DATA =			\
 	Main.js			\
 	Other.js		\
 	BasicLatin.js		\
 	CombDiacritMarks.js
-
-EXTRA_DIST = $(mj_DATA)
