--- a/data/mathjax/unpacked/Makefile.am
+++ b/data/mathjax/unpacked/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST =									\
+dist_noinst_DATA =									\
 	MathJax.js								\
 	config/MMLorHTML.js							\
 	extensions/HTML-CSS/handle-floats.js					\
