--- a/data/mathjax/jax/element/mml/Makefile.am
+++ b/data/mathjax/jax/element/mml/Makefile.am
@@ -2,6 +2,4 @@ SUBDIRS = optable
 
 mjdir=$(datadir)/yelp/mathjax/jax/element/mml
 
-mj_DATA = jax.js
-
-EXTRA_DIST = $(mj_DATA)
+dist_mj_DATA = jax.js
