--- a/data/mathjax/jax/output/HTML-CSS/Makefile.am
+++ b/data/mathjax/jax/output/HTML-CSS/Makefile.am
@@ -2,6 +2,4 @@ SUBDIRS = autoload fonts
 
 mjdir=$(datadir)/yelp/mathjax/jax/output/HTML-CSS
 
-mj_DATA = config.js jax.js
-
-EXTRA_DIST = $(mj_DATA)
+dist_mj_DATA = config.js jax.js
