--- a/data/mathjax/jax/output/HTML-CSS/fonts/TeX/Fraktur/Regular/Makefile.am
+++ b/data/mathjax/jax/output/HTML-CSS/fonts/TeX/Fraktur/Regular/Makefile.am
@@ -1,9 +1,7 @@
 mjdir=$(datadir)/yelp/mathjax/jax/output/HTML-CSS/fonts/TeX/Fraktur/Regular
 
-mj_DATA =		\
+dist_mj_DATA =		\
 	Main.js		\
 	Other.js	\
 	BasicLatin.js	\
 	PUA.js
-
-EXTRA_DIST = $(mj_DATA)
