--- a/data/mathjax/jax/output/HTML-CSS/fonts/TeX/Main/Italic/Makefile.am
+++ b/data/mathjax/jax/output/HTML-CSS/fonts/TeX/Main/Italic/Makefile.am
@@ -1,10 +1,8 @@
 mjdir=$(datadir)/yelp/mathjax/jax/output/HTML-CSS/fonts/TeX/Main/Italic
 
-mj_DATA =			\
+dist_mj_DATA =			\
 	Latin1Supplement.js	\
 	Main.js			\
 	LetterlikeSymbols.js	\
 	GeneralPunctuation.js	\
 	CombDiacritMarks.js
-
-EXTRA_DIST = $(mj_DATA)
