--- a/data/mathjax/jax/output/HTML-CSS/fonts/TeX/Main/Regular/Makefile.am
+++ b/data/mathjax/jax/output/HTML-CSS/fonts/TeX/Main/Regular/Makefile.am
@@ -1,10 +1,8 @@
 mjdir=$(datadir)/yelp/mathjax/jax/output/HTML-CSS/fonts/TeX/Main/Regular
 
-mj_DATA =			\
+dist_mj_DATA =			\
 	Main.js			\
 	GeometricShapes.js	\
 	MiscSymbols.js		\
 	SpacingModLetters.js	\
 	CombDiacritMarks.js
-
-EXTRA_DIST = $(mj_DATA)
