--- a/data/mathjax/jax/output/NativeMML/Makefile.am
+++ b/data/mathjax/jax/output/NativeMML/Makefile.am
@@ -1,5 +1,3 @@
 mjdir=$(datadir)/yelp/mathjax/jax/output/NativeMML
 
-mj_DATA = config.js jax.js
-
-EXTRA_DIST = $(mj_DATA)
+dist_mj_DATA = config.js jax.js
